force-app/main/default/objects/Invoice_item__c/fields/Product_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Group__c</fullName>
    <formula>TEXT(Product__r.Product_Sub_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sub Group</label>
    <type>Text</type>
</CustomField>