force-app/main/default/objects/Invoice_item__c/fields/Total_Weigh_in_KG__c.field-meta.xml
<CustomField>
    <fullName>Total_Weigh_in_KG__c</fullName>
    <formula>Qyt_in_Each__c * Product__r.Net_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weigh in KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>